--- a/index.tex
+++ b/index.tex
@@ -213,7 +213,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, enhanced, frame hidden, breakable, sharp corners, boxrule=0pt, interior hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[sharp corners, boxrule=0pt, frame hidden, interior hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1350,7 +1350,7 @@ of parameters with the predicted value
 
 \begin{verbatim}
  variable  mean median    sd   mad    q5   q95
- y_hat[1] 29.89  29.83 11.31 11.01 11.56 48.37
+ y_hat[1] 30.09  30.20 11.26 10.98 11.49 48.46
 \end{verbatim}
 
 \part{UNIT 7}
