--- a/index.qmd
+++ b/index.qmd
@@ -1,12 +1,20 @@
-# Preface {.unnumbered}
+# Introduction {.unnumbered}
 
-This is a Quarto book.
+This repository contains `R` translations of examples from Georgia Tech's [ISYE 6420: Bayesian Statistics](), created by Professor Brani Vidakovic and currently taught by Professor Roshan Joseph and head TA Greg Schreiter. It also has additional notes on each lecture. 
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+# Why?
+When I was taking this course the only option for Mac users was to either use a virtual machine to run WinBUGS/OpenBUGS. During the semester I was taking this, Aaron Reding was creating an alternate using Python and PyMC (see [here](https://areding.github.io/6420-pymc/intro.html)), but I found that PyMC had too many extra steps and was still fairly buggy. 
 
-```{r}
-1 + 1
-```
+After quite a bit of research, I stumbled across Stan. The benefits that Stan provides over PyMC is that it can be run using Python ([PyStan](https://mc-stan.org/users/interfaces/pystan.html) or [CmdStanPy]()) or R ([CmdStanR](https://mc-stan.org/cmdstanr/) or [RStan](https://mc-stan.org/users/interfaces/rstan.html)) or MATLAB, most of the models would also look similar to WinBUGS/OpenBUGS and finally the documentation for [Stan](https://mc-stan.org/users/documentation/) is excellent.
 
+When I became a TA for this course I noticed that not a lot of people were using Stan, so I wanted to give the students an alternative to running Markov Chain Monte Carlo for Bayesian statistics. 
 
-install.packages("cmdstanr", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
+# Site Structure
+This site was built with [Quarto Book](https://quarto.org/docs/books) and is made up of a combination of Stan files and Quarto Document (which is similar to RMarkdown files). You can view the entire repository on [GitHub](https://github.com/RoboticElephant/6420-stan).
+
+All pages match a corresponding lecture on Canvas, except when there are more pages than lectures in a unit. in which case the additional pages will be at the end of the unit. For example there are only eight lectures in Unit 3 on Canvas. The first eight pages here match the lecture numbers, while the ninth page has a supplementary problem and wasn't part of the original lectures.
+
+Any necessary data will either have a download link or, if the data is compact enough, will be included in the code.
+
+# Plans
+As of June 2023, this is still a work in progress. I have been working through each unit trying to add the important information. Stan is heavily used from Unit 6 on, so that has been where my focus has been aligned.
