--- a/unit1/topics_covered.qmd
+++ b/unit1/topics_covered.qmd
@@ -36,7 +36,7 @@ The midterm could include anything from the first half, but tends to focus on Un
 
 > Units covered: 6–7
 
-This is where we start using Probabilistic Programming Languages (PPLs) like BUGS, [Stan](index.qmd), or [PyMC](https://areding.github.io/6420-pymc/intro.html). We start with linear regression and move into hierarchical models.
+This is where we start using Probabilistic Programming Languages (PPLs) like BUGS, [Stan](../index.qmd), or [PyMC](https://areding.github.io/6420-pymc/intro.html). We start with linear regression and move into hierarchical models.
 
 ### Homework 6
 
